# ManipulatorVertex

./: .gitignore  CMakeLists.txt  Manipulator.cpp  Manipulator.h  NRXVectorApp.cpp  NRXVectorApp.def  NRXVectorApp.h  NRXVectorApp.rc  NRXVectorApp.sln  NRXVectorApp.vcxproj  NRXVectorApp.vcxproj.filters  Resource.h  build.bat  manipulator.json  pch.h
res/: NRXVectorApp.rc2
src/: Manipulator.cpp  NRXVectorApp.cpp  NRXVectorApp.h  Resource.h  framework.h
